fix: logs not showing

--- a/frontend/src/views/Logs.css
+++ b/frontend/src/views/Logs.css
@@ -3,4 +3,5 @@ pre {
   padding-left: 0.5rem;
   padding-bottom: 4em;
   max-width: 85vw;
+  color: black;
 }
